--- a/frontend/src/app/equipo-add/equipo-add.page.html
+++ b/frontend/src/app/equipo-add/equipo-add.page.html
@@ -5,6 +5,16 @@
 </ion-header>
 
 <ion-content class="ion-padding">
+  <ion-toolbar>
+    <ion-buttons slot="">
+      <ion-button (click)="navigateTo('jugador')">Ver Jugadores</ion-button>
+      <ion-button (click)="navigateTo('jugador-add')">Añadir Jugador</ion-button>
+      <ion-button (click)="navigateTo('equipo')">Ver Equipos</ion-button>
+      <ion-button (click)="navigateTo('equipo-add')">Añadir Equipo</ion-button>
+      <ion-button (click)="navigateTo('torneo')">Ver Torneos</ion-button>
+      <ion-button (click)="navigateTo('torneo-add')">Añadir Torneo</ion-button>
+    </ion-buttons>
+  </ion-toolbar>
   <form [formGroup]="equipoForm" (ngSubmit)="addEquipo()" novalidate>
     <ion-item lines="full">
       <ion-label position="floating">Nombre</ion-label>
@@ -18,7 +28,7 @@
 
     <ion-item lines="full">
       <ion-label position="floating">ID del Torneo</ion-label>
-      <ion-input formControlName="torneo" type="number" required></ion-input>
+      <ion-input formControlName="idTorneo" type="number" required></ion-input>
     </ion-item>
 
     <ion-row>
@@ -29,8 +39,5 @@
       </ion-col>
     </ion-row>
   </form>
-
-  <ion-button color="medium" (click)="goToEquipos()">Ver Equipos</ion-button>
-  <ion-button color="medium" (click)="goToHome()">Ir al Inicio</ion-button>
 </ion-content>
 
