--- a/frontend/src/app/equipo-update/equipo-update.page.html
+++ b/frontend/src/app/equipo-update/equipo-update.page.html
@@ -3,7 +3,18 @@
     <ion-title>Actualiza el Equipo</ion-title>
   </ion-toolbar>
 </ion-header>
+<ion-content class="ion-padding">
   <ion-content class="ion-padding">
+    <ion-toolbar>
+      <ion-buttons slot="">
+        <ion-button (click)="navigateTo('jugador')">Ver Jugadores</ion-button>
+        <ion-button (click)="navigateTo('jugador-add')">Añadir Jugador</ion-button>
+        <ion-button (click)="navigateTo('equipo')">Ver Equipos</ion-button>
+        <ion-button (click)="navigateTo('equipo-add')">Añadir Equipo</ion-button>
+        <ion-button (click)="navigateTo('torneo')">Ver Torneos</ion-button>
+        <ion-button (click)="navigateTo('torneo-add')">Añadir Torneo</ion-button>
+      </ion-buttons>
+    </ion-toolbar>
     <form [formGroup]="equipoUpdateForm" (ngSubmit)="updateEquipo()" novalidate>
       <ion-item lines="full">
         <ion-label position="floating">Nombre</ion-label>
@@ -17,7 +28,7 @@
 
       <ion-item lines="full">
         <ion-label position="floating">Torneo ID</ion-label>
-        <ion-input formControlName="torneo" type="number" required></ion-input>
+        <ion-input formControlName="idTorneo" type="number" required></ion-input>
       </ion-item>
 
       <ion-row>
@@ -28,15 +39,4 @@
         </ion-col>
       </ion-row>
     </form>
-
-    <ion-button (click)="goToEquipos()" color="primary" expand="full">
-      Ver Equipos
-    </ion-button>
-  
-   
-    <ion-button (click)="goToHome()" color="primary" expand="full">
-      Ir al Inicio
-    </ion-button>
-
   </ion-content>
-
