--- a/frontend/src/app/equipo/equipo.page.html
+++ b/frontend/src/app/equipo/equipo.page.html
@@ -5,21 +5,24 @@
 </ion-header>
 
 <ion-content class="ion-padding">
+  <ion-toolbar>
+    <ion-buttons slot="">
+      <ion-button (click)="navigateTo('jugador')">Ver Jugadores</ion-button>
+      <ion-button (click)="navigateTo('jugador-add')">Añadir Jugador</ion-button>
+      <ion-button (click)="navigateTo('equipo')">Ver Equipos</ion-button>
+      <ion-button (click)="navigateTo('equipo-add')">Añadir Equipo</ion-button>
+      <ion-button (click)="navigateTo('torneo')">Ver Torneos</ion-button>
+      <ion-button (click)="navigateTo('torneo-add')">Añadir Torneo</ion-button>
+    </ion-buttons>
+  </ion-toolbar>
+
   <ion-list>
     <ion-item *ngFor="let e of equipos">
-      {{ e.nombre_equipo }} - {{ e.region }}
+      {{ e.nombre_equipo }} - {{ e.region }} - {{ e.idTorneo }}
       <ion-buttons slot="end">
         <ion-button (click)="goToUpdateEquipo(e)">Actualizar</ion-button>
         <ion-button (click)="deleteEquipo(e.id)">Borrar</ion-button>
       </ion-buttons>
     </ion-item>
   </ion-list>
-
-  <ion-button (click)="goToAddEquipo()" color="primary" expand="full">
-    Añadir Equipo
-  </ion-button>
-
-  <ion-button (click)="goToHome()" color="primary" expand="full">
-    Ir al Inicio
-  </ion-button>
 </ion-content>
