--- a/frontend/src/app/jugador-add/jugador-add.page.html
+++ b/frontend/src/app/jugador-add/jugador-add.page.html
@@ -5,35 +5,46 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <form [formGroup]="jugadorForm" (ngSubmit)="addJugador()" novalidate>
-    <ion-item lines="full">
-      <ion-label position="floating">Nombre</ion-label>
-      <ion-input formControlName="nombre_jugador" type="text" required></ion-input>
-    </ion-item>
+  <ion-content class="ion-padding">
+    <ion-toolbar>
+      <ion-buttons slot="">
+        <ion-button (click)="navigateTo('jugador')">Ver Jugadores</ion-button>
+        <ion-button (click)="navigateTo('jugador-add')">Añadir Jugador</ion-button>
+        <ion-button (click)="navigateTo('equipo')">Ver Equipos</ion-button>
+        <ion-button (click)="navigateTo('equipo-add')">Añadir Equipo</ion-button>
+        <ion-button (click)="navigateTo('torneo')">Ver Torneos</ion-button>
+        <ion-button (click)="navigateTo('torneo-add')">Añadir Torneo</ion-button>
+      </ion-buttons>
+    </ion-toolbar>
+    <form [formGroup]="jugadorForm" (ngSubmit)="addJugador()" novalidate>
+      <ion-item lines="full">
+        <ion-label position="floating">Nombre</ion-label>
+        <ion-input formControlName="nombre_jugador" type="text" required></ion-input>
+      </ion-item>
 
-    <ion-item lines="full">
-      <ion-label position="floating">Rol</ion-label>
-      <ion-input formControlName="rol" type="text" required>
-      </ion-input>
-    </ion-item>
+      <ion-item lines="full">
+        <ion-label position="floating">Rol</ion-label>
+        <ion-input formControlName="rol" type="text" required>
+        </ion-input>
+      </ion-item>
 
-    <ion-item>
-      <ion-label position="floating">Nacionalidad</ion-label>
-      <ion-input formControlName="nacionalidad" type="text" required>
-      </ion-input>
-    </ion-item>
+      <ion-item>
+        <ion-label position="floating">Nacionalidad</ion-label>
+        <ion-input formControlName="nacionalidad" type="text" required>
+        </ion-input>
+      </ion-item>
 
-    <ion-item>
-      <ion-label position="floating">Equipo</ion-label>
-      <ion-input formControlName="equipo" type="number" required>
-      </ion-input>
-    </ion-item>
+      <ion-item>
+        <ion-label position="floating">Equipo</ion-label>
+        <ion-input formControlName="idEquipo" type="number" required>
+        </ion-input>
+      </ion-item>
 
-    <ion-row>
-      <ion-col>
-        <ion-button type="submit" color="success" shape="full" expand="block">Añadir Jugador</ion-button>
-      </ion-col>
-    </ion-row>
-  </form>
+      <ion-row>
+        <ion-col>
+          <ion-button type="submit" color="success" shape="full" expand="block">Añadir Jugador</ion-button>
+        </ion-col>
+      </ion-row>
+    </form>
 
-</ion-content>
+  </ion-content>
