--- a/frontend/src/app/torneo-add/torneo-add.page.html
+++ b/frontend/src/app/torneo-add/torneo-add.page.html
@@ -3,19 +3,30 @@
     <ion-title>Crea un torneo</ion-title>
   </ion-toolbar>
 </ion-header>
+<ion-content class="ion-padding">
   <ion-content class="ion-padding">
+    <ion-toolbar>
+      <ion-buttons slot="">
+        <ion-button (click)="navigateTo('jugador')">Ver Jugadores</ion-button>
+        <ion-button (click)="navigateTo('jugador-add')">Añadir Jugador</ion-button>
+        <ion-button (click)="navigateTo('equipo')">Ver Equipos</ion-button>
+        <ion-button (click)="navigateTo('equipo-add')">Añadir Equipo</ion-button>
+        <ion-button (click)="navigateTo('torneo')">Ver Torneos</ion-button>
+        <ion-button (click)="navigateTo('torneo-add')">Añadir Torneo</ion-button>
+      </ion-buttons>
+    </ion-toolbar>
 
     <form [formGroup]="torneoForm" (ngSubmit)="addTorneo()" novalidate>
       <ion-item lines="full">
         <ion-label position="floating">Nombre</ion-label>
         <ion-input formControlName="nombre_torneo" type="text" required></ion-input>
       </ion-item>
-  
+
       <ion-item lines="full">
         <ion-label position="floating">Localizacion</ion-label>
         <ion-input formControlName="localizacion" type="text" required></ion-input>
       </ion-item>
-  
+
       <ion-row>
         <ion-col>
           <ion-button type="submit" color="success" shape="full" expand="block">Añadir Torneo</ion-button>
@@ -25,10 +36,9 @@
     <ion-button (click)="goToTorneo()" color="primary" expand="full">
       Ver Torneos
     </ion-button>
-  
-   
+
+
     <ion-button (click)="goToHome()" color="primary" expand="full">
       Ir al Inicio
     </ion-button>
   </ion-content>
-
